# MCP2Xiaozhi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README_CN.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.md  changelog.md  cli.md  configuration.md  deployment.md  development.md  index.md  quick-start.md  transports.md  zh-cn.md
examples/: .env.example  calculator.py  mcp_config.json
src/mcp2xiaozhi/: __init__.py  __main__.py  _version.py  bridge.py  cli.py  config.py  exceptions.py  logging_setup.py  manager.py  metrics.py  tool_filter.py  ws.py
src/mcp2xiaozhi/transports/: __init__.py  base.py  sse.py  stdio.py  streamable_http.py
tests/: __init__.py  conftest.py  test_bridge.py  test_bridge_filter.py  test_cli.py  test_config.py  test_integration.py  test_logging.py  test_metrics.py  test_tool_filter.py  test_transports.py
