[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mcp2xiaozhi"
version = "0.2.1"
description = "Bridge any MCP server (stdio / SSE / StreamableHTTP) to a Xiaozhi server over WebSocket."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "StanleyChanH" },
]
keywords = ["mcp", "model-context-protocol", "xiaozhi", "bridge", "mcp-server", "stdio", "sse", "streamable-http"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
    "Framework :: AsyncIO",
]
dependencies = [
    "mcp>=1.20.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "anyio>=4.0.0",
    "python-dotenv>=1.0.0",
    "typing_extensions>=4.10.0; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "build>=1.2.0",
    "fastmcp>=2.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
mcp2xiaozhi = "mcp2xiaozhi.cli:main"

[project.urls]
Homepage = "https://github.com/StanleyChanH/MCP2Xiaozhi"
Repository = "https://github.com/StanleyChanH/MCP2Xiaozhi"
Issues = "https://github.com/StanleyChanH/MCP2Xiaozhi/issues"
Changelog = "https://github.com/StanleyChanH/MCP2Xiaozhi/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp2xiaozhi"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mcp2xiaozhi",
    "tests",
    "examples",
    "README.md",
    "README_CN.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=mcp2xiaozhi --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/mcp2xiaozhi"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
disable_error_code = ["type-arg"]
files = ["src/mcp2xiaozhi"]
